# errorfunctions

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.cargo/: config.toml
examples/: example.rs
src/: auxilliary.rs  complexerrorfunctions.rs  lib.rs  realerrorfunctions.rs
src/html/: docs-header.html
