[package]
name = "errorfunctions"
version = "0.1.0"
edition = "2021"
description = "Pure Rust package to compute the error function, Dawson's function, and Faddeeva's function for real and complex arguments."
license = "MIT"

[dependencies]

num = "0.4"
num-traits = "0.2"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/html/docs-header.html" ]

