[package]
name = "errorfunctions"
version = "0.1.1"
edition = "2021"
authors = ["Joris De Ridder"]
description = "Pure Rust package to compute the error function, Dawson's function, and Faddeeva's function for real and complex arguments."
keywords = ["errorfunction", "Dawson", "Faddeeva"]
categories = ["mathematics"]
readme = "Readme.md"
repository = "https://github.com/JorisDeRidder/errorfunctions"
license = "MIT"

[dependencies]

num = "0.4"
num-complex = "0.4.2"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/html/docs-header.html" ]

